crates/monochange_integration_tests/tests/snapshots/api_classification__change_classify_treats_public_slice_appends_as_additive.snap
---
source: crates/monochange_integration_tests/tests/api_classification.rs
expression: report
---
{
  "candidate": "merge-tree:[SHA]",
  "comparisons": [
    {
      "base": "HEAD~1",
      "head": "merge-tree:[SHA]",
      "kind": "pull_request",
      "note": null,
      "status": "analyzed"
    },
    {
      "base": "[SHA]",
      "head": "HEAD",
      "kind": "source_delta",
      "note": null,
      "status": "analyzed"
    }
  ],
  "default_branch": "HEAD~1",
  "packages": [
    {
      "action": "create",
      "comparisons": [
        {
          "base": "HEAD~1",
          "head": "merge-tree:[SHA]",
          "kind": "pull_request",
          "note": null,
          "status": "analyzed"
        },
        {
          "base": "[SHA]",
          "head": "HEAD",
          "kind": "source_delta",
          "note": null,
          "status": "analyzed"
        },
        {
          "base": null,
          "head": "merge-tree:[SHA]",
          "kind": "release",
          "note": "no reachable release tag matched this package",
          "status": "unavailable"
        },
        {
          "base": null,
          "head": "HEAD~1",
          "kind": "release_to_default",
          "note": "no reachable release tag matched this package",
          "status": "unavailable"
        }
      ],
      "decision": {
        "classification_enforced": true,
        "compatibility_impact": "additive",
        "completeness": "complete",
        "confidence": "high",
        "enforceable_minimum": "minor",
        "finding_ids": [
          "cargo/public-api/public_api/modified/constant/LINT_NAMES",
          "cargo/public-api/public_api/modified/static/LINTS"
        ],
        "proposed_changeset_bump": "minor",
        "pull_request_changes": true,
        "release_floor": "minor",
        "review_required": false
      },
      "ecosystem": "cargo",
      "existing_changesets": [],
      "findings": [
        {
          "after": "pub const LINT_NAMES : & [& str] = & [\"asset_arithmetic\" , \"unchecked_math\" , \"shift_overflow\"] ;",
          "analyzer": {
            "engine": "monochange",
            "id": "cargo/public-api",
            "version": "1"
          },
          "before": "pub const LINT_NAMES : & [& str] = & [\"asset_arithmetic\" , \"unchecked_math\"] ;",
          "bump": "minor",
          "change": "modified",
          "comparisons": [
            "pull_request",
            "source_delta"
          ],
          "confidence": "high",
          "coverage": {
            "completeness": "complete",
            "detection_level": "signature",
            "note": "constant `LINT_NAMES` appends elements to a public `& str` slice literal; the element type and the existing element order are unchanged"
          },
          "id": "cargo/public-api/public_api/modified/constant/LINT_NAMES",
          "impact": "additive",
          "location": "src/lib.rs",
          "rule_id": "cargo/public-api/public_api/modified/constant",
          "summary": "constant `LINT_NAMES` modified",
          "surface": "public_api"
        },
        {
          "after": "pub static LINTS : & [& str] = & [\"asset_arithmetic\" , \"unchecked_math\" , \"shift_overflow\"] ;",
          "analyzer": {
            "engine": "monochange",
            "id": "cargo/public-api",
            "version": "1"
          },
          "before": "pub static LINTS : & [& str] = & [\"asset_arithmetic\" , \"unchecked_math\"] ;",
          "bump": "minor",
          "change": "modified",
          "comparisons": [
            "pull_request",
            "source_delta"
          ],
          "confidence": "high",
          "coverage": {
            "completeness": "complete",
            "detection_level": "signature",
            "note": "static `LINTS` appends elements to a public `& str` slice literal; the element type and the existing element order are unchanged"
          },
          "id": "cargo/public-api/public_api/modified/static/LINTS",
          "impact": "additive",
          "location": "src/lib.rs",
          "rule_id": "cargo/public-api/public_api/modified/static",
          "summary": "static `LINTS` modified",
          "surface": "public_api"
        }
      ],
      "package_id": "lints",
      "package_name": "lints",
      "recommendation": "minor",
      "release_owner": {
        "id": "lints",
        "kind": "package",
        "latest_release": null
      },
      "summary": "2 additive finding(s) propose a minor changeset",
      "warnings": []
    }
  ],
  "recommendation": "minor",
  "schema_version": "[SCHEMA_VERSION]",
  "skipped": false,
  "warnings": []
}
